--- a/BDA-project/.gitignore
+++ b/BDA-project/.gitignore
@@ -76,7 +76,8 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+/data/raw/Brandriskdata 2000-2020.csv
+/data/raw/Insatser till brand i skog och mark 2000-2020.csv
 
 # Mac OS-specific storage files
 .DS_Store
