--- a/BDA-project/requirements.txt
+++ b/BDA-project/requirements.txt
@@ -2,7 +2,6 @@
 -e .
 
 # external requirements
-click
 Sphinx
 coverage
 awscli
@@ -10,14 +9,10 @@ flake8
 python-dotenv
 numpy
 pandas
-#N,E conversions
-sweref99
 #Plotting
-matplotlib.pyplot
+matplotlib
 #Map
-IPython.display 
 ipywidgets
 folium
-selenium
 #Models
 sklearn
